update Go version in Dockerfile

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ Thumbs.db
 
 # Build directories
 cmd/server/tusk
+
+client_secret_746585311375-6k2armb5mcipb8jkpcn0q569bsggao7l.apps.googleusercontent.com.json
