first working version on fly.io

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ Thumbs.db
 cmd/server/tusk
 
 client_secret_746585311375-6k2armb5mcipb8jkpcn0q569bsggao7l.apps.googleusercontent.com.json
+
+# Fly.io
+fly.toml
+.dockerignore
