first working version on fly.io

--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ Thumbs.db
 # Build directories
 cmd/server/tusk
 
-client_secret_746585311375-6k2armb5mcipb8jkpcn0q569bsggao7l.apps.googleusercontent.com.json
+./google_client_secret.json
 
 # Fly.io
 fly.toml
